@@ -15,7 +15,7 @@
 
 /*
  * DoubleCell.java
- * Copyright (C) 2009-2020 University of Waikato, Hamilton, New Zealand
+ * Copyright (C) 2009-2024 University of Waikato, Hamilton, New Zealand
  */
 
 package adams.data.spreadsheet;
@@ -488,7 +488,7 @@ public class DoubleCell
       setContent(getSpreadSheet().getDateFormat().parse(value));
     }
     else if (checkLong(value)) {
-      setContent(new Long(value));
+      setContent(Long.valueOf(value));
     }
     else if (checkDouble(value)) {
       try {
@@ -516,7 +516,7 @@ public class DoubleCell
       setMissing();
     }
     else {
-      if (value.length() > 0) {
+      if (!value.isEmpty()) {
 	if (value.startsWith(PREFIX_FORMULA)) {
 	  if (checkFormula(value)) {
 	    m_Formula = value;
@@ -561,12 +561,12 @@ public class DoubleCell
 	  return SpreadSheet.MISSING_VALUE;
       case LONG:
 	if (checkLong(value))
-	  return new Long(value);
+	  return Long.valueOf(value);
 	else
 	  return SpreadSheet.MISSING_VALUE;
       case DOUBLE:
 	if (checkDouble(value))
-	  return new Double(value);
+	  return Double.valueOf(value);
 	else
 	  return SpreadSheet.MISSING_VALUE;
       case STRING:
@@ -880,7 +880,7 @@ public class DoubleCell
   public Boolean toBoolean() {
     calculateIfRequired();
     if (m_ContentType == ContentType.BOOLEAN)
-      return new Boolean(m_Content == 1.0);
+      return (m_Content == 1.0);
     else
       return null;
   }
@@ -1072,7 +1072,7 @@ public class DoubleCell
       return m_Content;
     }
     else if (m_ContentType == ContentType.LONG) {
-      return new Double((long) m_Content);
+      return (double) ((long) m_Content);
     }
     else if (m_ContentType == ContentType.STRING) {
       try {
@@ -1114,7 +1114,7 @@ public class DoubleCell
     if (m_ContentType == ContentType.LONG)
       return (long) m_Content;
     else if (m_ContentType == ContentType.STRING)
-      return new Double(getContent()).longValue();
+      return Double.valueOf(getContent()).longValue();
     return null;
   }
 
